lab-slack-solved

--- a/starter_code/index.html
+++ b/starter_code/index.html
@@ -18,11 +18,11 @@
 
 <body>
   <!-- NAVBAR -->
-  <nav>
+  <nav id="nav-container">
     <div>
-      <img src="./images/slack-logo.png" alt="Slack logo" />
+      <img class="logo-slack" src="./images/slack-logo.png" alt="Slack logo" />
 
-      <ul>
+      <!--<ul>
         <li>
           <a href="#">Product</a>
         </li>
@@ -35,16 +35,16 @@
         <li>
           <a href="#">Pricing</a>
         </li>
-      </ul>
+      </ul>-->
     </div>
 
     <div>
-      <button>
-        <img src="./images/icon-search.png" alt="Search icon">
+      <button class="button-nav">
+        <img class="nav-button-images" src="./images/icon-search.png" alt="Search icon">
       </button>
 
-      <button>
-        <img src="./images/icon-menu.png" alt="Menu icon">
+      <button class="button-nav">
+        <img class="nav-button-images" src="./images/icon-menu.png" alt="Menu icon">
       </button>
 
       <ul hidden>
@@ -60,98 +60,105 @@
 
 
   <!-- HEADER -->
-  <header>
-    <div>
-      <h1>Great teamwork starts with a digital HQ</h1>
+  <header id="header-container">
+    <div class="header-intro-container">
+      <h1 class="intro">Great teamwork starts with a digital HQ</h1>
 
-      <p>Slack is free to try for as long as you'd like.</p>
+      <p class="free-intro"><span class="free-intro-bold">Slack is free to try</span> for as long as you'd like.</p>
 
-      <div>
-        <button>Sign up with email</button>
+      <div class="button-signup-container">
+        <button class="button-signup-email">Sign up with email</button>
 
-        <button>
-          <img src="./images/logo-google.png" alt="Google logo" />
+        <button class="button-signup-google">
+          <img class="google-logo" src="./images/logo-google.png" alt="Google logo" />
           <span>Sign up with Google</span>
         </button>
       </div>
 
     </div>
 
-    <div>
-      <img src="./images/hero-product-ui.png" alt="Slack app screenshot" />
+    <div class="hero-image-container">
+      <img class="hero-image" src="./images/hero-product-ui.png" alt="Slack app screenshot" />
     </div>
   </header>
 
-  <main>
-    <section>
-      <p>Trusted by companies all over the world</p>
+  <main id="main-page-container">
+    <section class="partner-banner-container">
+      <p class="partner-title">Trusted by companies all over the world</p>
 
-      <div>
-        <img src="./images/logo-airbnb.png" alt="Airbnb logo" />
-        <img src="./images/logo-nasa.png" alt="NASA logo" />
-        <img src="./images/logo-uber.png" alt="Uber logo" />
-        <img src="./images/logo-target.png" alt="Target logo" />
-        <img src="./images/logo-nyt.png" alt="New York Times logo" />
-        <img src="./images/logo-spotify.png" alt="Spotify logo" />
+      <div class="partner-logo-container">
+        <img class="partner-logo" src="./images/logo-airbnb.png" alt="Airbnb logo" />
+        <img class="partner-logo partner-logo-small" src="./images/logo-nasa.png" alt="NASA logo" />
+        <img class="partner-logo" src="./images/logo-uber.png" alt="Uber logo" />
+        <img class="partner-logo partner-logo-small" src="./images/logo-target.png" alt="Target logo" />
+        <img class="partner-logo" src="./images/logo-nyt.png" alt="New York Times logo" />
+        <img class="partner-logo" src="./images/logo-spotify.png" alt="Spotify logo" />
       </div>
 
     </section>
 
-    <section>
-      <h3>Teams large and small rely on Slack</h3>
-      <p>Slack securely scales up to support collaboration at the world’s biggest companies.</p>
+    <section id="teams-container">
+      <h3 class="teams-title">Teams large and small rely on Slack</h3>
+      <p class="teams-brag">Slack securely scales up to support collaboration at the world’s biggest companies.</p>
 
 
-      <ul>
+      <ul class="teams-info-list">
         <li>
-          <p><span>85%</span></p>
-          <p>
+          <p class="teams-info-number"><span class="teams-info-percent">85%</span></p>
+          <p class="teams-info">
             of users say Slack has improved communication
             <sup>*</sup>
           </p>
         </li>
 
         <li>
-          <p><span>86%</span></p>
-          <p>
+          <p class="teams-info-number"><span class="teams-info-percent">86%</span></p>
+          <p class="teams-info">
             feel their ability to work remotely has improved has improved
             <sup>*</sup>
           </p>
         </li>
 
         <li>
-          <p><span>88%</span></p>
-          <p>
-            feel more connected to their teams*
+          <p class="teams-info-number"><span class="teams-info-percent">88%</span></p>
+          <p class="teams-info">
+            feel more connected to their teams
             <sup>*</sup>
           </p>
         </li>
       </ul>
     </section>
 
-    <section>
-      <h3>Welcome to your new digital HQ</h3>
+    <section id="tryforfree-container">
+      <h3 class="tryforfree-title">Welcome to your new digital HQ</h3>
 
-      <button>Try for free</button>
-      <button>Talk to sales</button>
+      <button class="tryforfree-button">Try for free</button>
+      <button class="talktosales-button">Talk to sales</button>
     </section>
 
   </main>
 
   <footer>
-    <ul>
+
+    <hr class="divider-footer">
+
+    <ul class="footer-info-list">
       <li>Status</li>
       <li>Privacy</li>
       <li>Terms</li>
       <li>Cookie Preferences</li>
       <li>Contact Us</li>
-      <li>Change Region</li>
-      <li>Download Slack</li>
+      <li class="footer-info-list-flex">
+        <img src="images/icon-region.png">
+        Change Region
+      </li>
+      <li class="footer-info-list-flex-download">
+        <img class="footer-info-list-image" src="images/icon-download.png">
+        Download Slack
+      </li>
     </ul>
 
-    <hr>
-
-    <ul>
+    <ul class="footer-socials-list">
       <li>
         <i class="fab fa-twitter"></i>
       </li>
@@ -166,7 +173,7 @@
       </li>
     </ul>
 
-    <div>
+    <div class="footer-copyrights">
       <small>
         &copy; 2022 Slack Technologies, LLC, a Salesforce company. All rights reserved. Various trademarks held by
         their respective owners.
